@@ -1,0 +1,19 @@
+use lib '/data/Wing/author.t/lib','/data/Wing/lib';
+use Test::More;
+use Wing::Perl;
+use Wing;
+use Ouch;
+
+use_ok 'Wingman';
+
+my $wingman = Wingman->new;
+
+isa_ok $wingman, 'Wingman';
+
+
+$wingman->put('EchoJson',{foo => 'bar'});
+
+done_testing;
+
+END {
+}
