@@ -18,6 +18,11 @@
 	   },
         }
     },
+    "aws" : {
+        "access_key" : "",
+        "secret_key" : "",
+        "image1_bucket_name_goes_here" : "images1.example.com",
+    },
     "api_key_permissions" : [
     	"view_my_account",
     	"edit_my_account"
