@@ -1,0 +1,131 @@
+[% page_title = "Tests" %]
+[% INCLUDE header_include.tt %]
+
+<div class="container" ng-app="testApp" ng-controller="testCtrl" ng-cloak>
+    <div class="row">
+    
+        <div class="col-sm-7">
+            <h1>[% page_title %]</h1>
+            
+            <p>
+                <button class="btn btn-danger" ng-click="confirmations.toggle()"><span class="glyphicon glyphicon-question-sign"></span> <span ng-if="confirmations.disabled()">Enable</span> <span ng-if="confirmations.enabled()">Disable</span> Confirmations</button>
+            </p>
+    
+            <form class="form-search">
+                <div class="input-group">
+                    <input class="form-control" type="text" ng-model="query" class="search-query">
+                    <span class="input-group-btn">
+                        <button ng-click="search();" type="button" class="btn btn-primary">Search</button>
+                    </span>
+                </div>
+            </form>
+            
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Last Updated</th>
+                        [% IF current_user.is_admin %]<th>Manage</th>[% END %]
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr ng-repeat="test in tests.objects" id="{{test.properties.id}}">
+                        <td><a href="{{test.properties.view_uri}}">{{test.properties.name}}</a></td>
+                        <td>{{test.properties.date_updated|datetime:'longDate'}}</td>
+                        [% IF current_user.is_admin %]<td>
+                            <a href="{{test.properties.edit_uri}}" class="btn btn-primary">Edit</a>
+                            <button class="btn btn-danger" ng-click="test.delete()">Delete</button>
+                        </td>[% END %]
+                    </tr>
+                </tbody>
+            </table>
+            
+            <pagination max-size="5" rotate="false" ng-click="search()" items-per-page="paging.items_per_page" direction-links="false" boundary-links="true" total-items="paging.total_items" ng-model="paging.page_number"></pagination>
+    
+        </div><!-- col-sm-7 -->
+        
+        [% IF current_user %]
+        <div class="col-sm-5">
+            <form class="form-horizontal">
+                <fieldset>
+                    <legend>Create A Test</legend>
+                    
+                    <div class="form-group">
+                        <label class="col-sm-4 control-label" for="is_cool">Is_cool</label>
+                        <div class="col-sm-8">
+                            [% INCLUDE select_list_include.tt options=options field="is_cool" ng="ng-model=\"new_test.is_cool\"" %]
+                        </div>
+                    </div>
+                    
+                    <div class="form-group">
+                        <label class="col-sm-4 control-label" for="name">Name</label>
+                        <div class="col-sm-8">
+                            <input class="form-control" type="text" name="name" id="name" value="[% test.name FILTER html %]" ng-model="new_test.name">
+                        </div>
+                    </div>
+                    
+                    <div class="form-group">
+                        <label class="col-sm-4 control-label"></label>
+                        <div class="col-sm-8">
+                            <button class="btn btn-primary" ng-click="create()">Create</button>
+                        </div>
+                    </div>
+                </fieldset>
+            </form>
+        </div><!-- col-sm-5 -->
+        [% END %]
+    
+        
+    </div><!-- row -->
+</div><!-- container -->
+
+[% foot_tags = BLOCK %]
+[% INCLUDE angular_js_include.tt %]
+[% INCLUDE bootstrapui_js_include.tt %]
+
+<script type="text/javascript">
+'use strict';
+
+var testapp = angular.module('testApp', ['ui.bootstrap','wing']);
+
+testapp.controller('testCtrl', function($scope, $http, objectListManager, confirmations) {
+
+    $scope.query = ''; // what to search on
+    $scope.new_test = {}; // Test to create
+
+    $scope.confirmations = confirmations;
+    
+    $scope.search = function () {
+        // get a list of objects with paging
+        $scope.tests = new objectListManager({
+            fetch_options : {
+                query: $scope.query,
+                _include_relationships: 1,
+                _include_related_objects: 1,
+            },
+            list_api : '/api/test',
+            create_api : '/api/test',
+            on_update : function(properties, index) {
+                wing.success(properties.name + ' saved.');
+            },
+            on_delete : function(properties) {
+                wing.success(properties.name + ' deleted.');
+            },
+        });
+        $scope.tests.search(); // calling .list() instead of .search() would return all objects, instead of paging
+    };
+    $scope.search();
+
+    $scope.create = function() {
+        $scope.tests.create($scope.new_test, {
+            on_success : function(properties) {
+                wing.success('Test added.');
+                window.location.href = '/test/'+properties.id+'/edit';                
+            },
+        })
+    };
+
+});
+</script>
+[% END %]
+[% INCLUDE footer_include.tt %]
